# contract

./: Cargo.toml  README.md  app.md  backend.md  project.md
contracts/fractional-ownership/: Cargo.toml
contracts/fractional-ownership/src/: lib.rs
contracts/fractional-ownership/test_snapshots/test/: test_mint_and_transfer.1.json
contracts/governance-dao/: Cargo.toml
contracts/governance-dao/src/: lib.rs
contracts/governance-dao/test_snapshots/test/: test_proposal_and_vote.1.json
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/marketplace/test_snapshots/test/: test_cancel_listing.1.json  test_list_and_buy.1.json
contracts/region-factory/: Cargo.toml
contracts/region-factory/src/: lib.rs
contracts/region-factory/test_snapshots/test/: test_create_and_get_region.1.json  test_set_tax_rate.1.json
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/treasury/test_snapshots/test/: test_deposit_and_withdraw.1.json
contracts/yield-distributor/: Cargo.toml
contracts/yield-distributor/src/: lib.rs
contracts/yield-distributor/test_snapshots/test/: test_deposit_and_claim.1.json
